--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
 .aviso{
     display: flex;
     width: 100vw;
-    height: 100vh;
-    
+    height: 10vh;
+    justify-content: center;
+    align-items: center;
+    background-color: #f3f3f3;
+    color: #092C4C;
 }
