--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 .aviso{
     display: flex;
-    width: 100px;
+    width: 80vw;
     height: 100px;
     justify-content: center;
     align-items: center;
