--- a/style.css
+++ b/style.css
@@ -1,9 +1,16 @@
 .aviso{
     display: flex;
-    width: 80vw;
+    width: 100vw;
     height: 100px;
     justify-content: center;
     align-items: center;
     background-color: #f3f3f3;
     color: #092C4C;
+}
+.aviso-modal{
+    display: flex;
+    width: 50%;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
 }
