--- a/style.css
+++ b/style.css
@@ -19,3 +19,13 @@
 .hidden{
     display: none;
 }
+
+.quadrado {
+  position: absolute;
+  width: 100px;
+  height: 100px;
+  background-color: white;
+  opacity: 0.7;
+  top: 50px;
+  left: 50px;
+}
