--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+
+.hidden{
+    display: none;
+}
+
+
+/* INSTRUÇÕES */
 .aviso{
     display: flex;
     width: 100vw;
@@ -16,14 +23,44 @@
     text-align: center;
 }
 
-.hidden{
-    display: none;
+/* QUESTIONS */
+.central-section{
+    display: flex;
+    width: 100vw;
+    height: 100vh;
+    justify-content: center;
+}
+.question{
+    display: flex;
+    width: 100%;
+    height: 20%;
+    background-color: #f3f3f3;
+    color: #092C4C;
+}
+.grid-options{
+    display: grid;
+    width: 100%;
+    height: 80%;
+    grid-template-columns: repeat(2, 1fr);
+}
+.grid-option{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 70%;
 }
 
-.quadrado {
-    position: absolute;
+
+
+/* SCORE */
+.show-score{
+    position: fixed;
+    bottom: 0;
+    right: 0;
+}
+.square{
+    display: flex;
     width: 100px;
-    height: 100px;
-    background-color: white;
-    opacity: 0.7;
-  }
+    height: 30px;
+}
+
