--- a/style.css
+++ b/style.css
@@ -44,10 +44,10 @@
     grid-template-columns: repeat(2, 1fr);
 }
 .grid-option{
-    display: flex;
+    position: absolute;
     flex-direction: column;
-    width: 100%;
-    height: 70%;
+    width: 100px;
+    height: 200px;
 }
 
 
