--- a/style.css
+++ b/style.css
@@ -44,10 +44,10 @@
     grid-template-columns: repeat(2, 1fr);
 }
 .grid-option{
-    position: absolute;
+    display: flex;
     flex-direction: column;
-    width: 100px;
-    height: 200px;
+    width: 100%;
+    height: 70%;
 }
 
 
