--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@
     width: 100vw;
     height: 100vh;
     justify-content: center;
+    flex-direction: column;
 }
 .question{
     display: flex;
