--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@
 /* QUESTIONS */
 .central-section{
     display: flex;
+    box-shadow: 3px;
     width: 100vw;
     height: 100vh;
     justify-content: center;
@@ -49,7 +50,9 @@
     display: flex;
     flex-direction: column;
     background-color: #f3f3f3;
-
+    justify-content: center;
+    align-items: center;
+    border: 2px solid black;
     width: 100%;
     height: 50%;
 }
