--- a/style.css
+++ b/style.css
@@ -37,6 +37,9 @@
     width: 100%;
     height: 30%;
     background-color: #f3f3f3;
+    justify-content: center;
+    align-items: center;
+    word-wrap:normal;
     color: #092C4C;
 }
 .grid-options{
@@ -52,6 +55,7 @@
     background-color: #f3f3f3;
     justify-content: center;
     align-items: center;
+    word-wrap:normal;
     border: 2px solid black;
     width: 100%;
     height: 50%;
