--- a/style.css
+++ b/style.css
@@ -32,8 +32,8 @@
 /* SCORE */
 .show-score{
     position: fixed;
-    bottom: 0;
-    right: 0;
+    bottom: 0%;
+    right: 0%;
 }
 .square{
     display: flex;
