--- a/style.css
+++ b/style.css
@@ -1,11 +1,3 @@
-
-.hidden{
-    display: none;
-}
-
-
-
-
 /* INSTRUÇÕES */
 .aviso{
     display: flex;
@@ -25,15 +17,12 @@
     text-align: center;
 }
 
-
-
-
-
 /* SCORE */
 .show-score{
     position: fixed;
-    bottom: 0%;
-    right: 0%;
+    bottom: 0;
+    right: 0;
+    z-index: 999;
 }
 .square{
     display: flex;
