--- a/pergunta/stylePergunta.css
+++ b/pergunta/stylePergunta.css
@@ -1,43 +1,55 @@
-*{
+* {
     margin: 0;
     padding: 0;
 }
 
+body {
+    width: (100%-1px);
+    overflow: hidden;
+}
+
 /* QUESTIONS */
-.central-section{
+.central-section {
     display: flex;
     box-shadow: 3px;
-    width: 100vw;
     height: 100vh;
     justify-content: center;
     flex-direction: column;
     z-index: 999;
 }
-.question{
+
+.question {
     display: flex;
     width: 100%;
     height: 30%;
-    background-color: #f3f3f3;
+    background-color: #4fe0f3;
     justify-content: center;
     align-items: center;
-    word-wrap:normal;
+    word-wrap: normal;
     color: #092C4C;
+    font-size: xx-large;
+    font-family: 'Cursive', sans-serif;
 }
-.grid-options{
+
+.grid-options {
     display: grid;
     width: 100%;
-    height: 70%;
+    height: 100%;
     background-color: #f3f3f3;
+    background-color: #092C4C;
+    font-size: 26px;
+    color: white;
     grid-template-rows: repeat(2, 1fr);
+    
 }
-.grid-option{
+
+.grid-option {
     display: flex;
     flex-direction: column;
-    background-color: #f3f3f3;
     justify-content: center;
     align-items: center;
-    word-wrap:normal;
+    word-wrap: normal;
     border: 2px solid black;
     width: 100%;
-    height: 50%;
+    height: 100%;
 }
