--- a/pergunta/stylePergunta.css
+++ b/pergunta/stylePergunta.css
@@ -28,7 +28,8 @@ body {
     word-wrap: normal;
     color: #092C4C;
     font-size: xx-large;
-    font-family: 'Cursive', sans-serif;
+    font-weight: 500;
+    font-family: system-ui;
 }
 
 .grid-options {
@@ -40,7 +41,8 @@ body {
     font-size: 26px;
     color: white;
     grid-template-rows: repeat(2, 1fr);
-    
+    font-family: system-ui;
+    font-weight: 500;
 }
 
 .grid-option {
@@ -49,7 +51,8 @@ body {
     justify-content: center;
     align-items: center;
     word-wrap: normal;
-    border: 2px solid black;
+    border: 1px solid black;
     width: 100%;
     height: 100%;
 }
+
