--- a/camera/style.css
+++ b/camera/style.css
@@ -4,6 +4,8 @@
     width: 100vw;
     height: 100px;
     justify-content: center;
+    margin: 0;
+    padding: 0;
     align-items: center;
 }
 .aviso-modal{
@@ -12,8 +14,12 @@
     height: 100%;
     justify-content: center;
     align-items: center;
-    background-color: #f3f3f3;
+    background-color: #4fe0f3;
     color: #092C4C;
+    font-size: x-large;
+    margin: 0;
+    font-weight: 500;
+    font-family: system-ui;
     text-align: center;
 }
 
