--- a/menuInicial/menuInicial.css
+++ b/menuInicial/menuInicial.css
@@ -20,17 +20,34 @@
     background-color: #092C4C;
     display: flex;
     justify-content: space-around;
-    flex-direction: column;
     flex-wrap: wrap;
 }
 
-.cardQuiz{
+
+.divSup{
     width: 35%;
     height: 35%;
-    background-color: green;
+    display: flex;
+    flex-direction: column;
+}
+
+.cardQuiz{
+    width: 100%;
+    height: 100%;
+    display: flex;
+
+    background-color: #092C4C;
 }
 
 img{
     width: 100%;
     height: 100%;
+}
+
+h3{
+    font-size: large;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: white;
+    text-align: center;
+    font-weight: lighter;
 }
