--- a/camera/style.css
+++ b/camera/style.css
@@ -36,4 +36,12 @@
     height: 30px;
 }
 
+#btnVoltar{
+    background-color: #4fe0f3;
+    border: none;
+    rotate: 180deg;
+    font-size:xx-large  ;
+    height: 100%;
+}
+
 
